--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   position: relative;
   margin: 0;
   min-width: 1408px;
-  font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+  font-family: "Montserrat", "Helvetica", "Arial", serif;
   font-size: 16px;
   line-height: 32px;
   color: #222222;
